YNU-649: Add create_app_session, submit_deposit_state handlers & App PKG (#490)
---------
